memperbaiki path untuk pwa

--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
   "name": "Todo list simple",
   "icons": [
     {
-      "src": "./img/icon.jpg",
+      "src": "to-do-list-simple/img/icon.jpg",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
-  "start_url": "/",
+  "start_url": "/to-do-list-simple",
   "background_color": "#8d34d3",
   "display": "standalone",
   "theme_color": "#8d34d3"
